# data-structure-and-algorithms

./: .gitignore  CMakeLists.txt  README.en.md  README.md  circylarl-inked-lists.c  double_linked_lists.c  main.c  sequenatialList.c  sequenatial_list.c  singly_linked_list.c  stack.c
线性表/: double_linked_lists.c  singly_linked_list.c
线性表结构/: queue.c  stack.c
